--- a/src/Entrega 1/Frontend/FecaPass/app/src/main/AndroidManifest.xml
+++ b/src/Entrega 1/Frontend/FecaPass/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
             android:name=".main_entrar"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".entrar"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
