--- a/src/Entrega 1/Backend/fecapass-backend/package.json
+++ b/src/Entrega 1/Backend/fecapass-backend/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "fecapass-backend": "file:",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.0",
     "sequelize": "^6.37.6"
