--- a/src/Entrega 1/Backend/fecapass-backend/package.json
+++ b/src/Entrega 1/Backend/fecapass-backend/package.json
@@ -16,6 +16,7 @@
     "fecapass-backend": "file:",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.0",
+    "nodemailer": "^6.10.0",
     "sequelize": "^6.37.6"
   }
 }
