--- a/src/Entrega 1/Frontend/FecaPass/app/build.gradle
+++ b/src/Entrega 1/Frontend/FecaPass/app/build.gradle
@@ -3,11 +3,11 @@ plugins {
 }
 
 android {
-    namespace 'com.example.project'
+    namespace 'br.fecapads.fecapassjava'
     compileSdk 35
 
     defaultConfig {
-        applicationId "com.example.project"
+        applicationId "br.fecapads.fecapassjava"
         minSdk 24
         targetSdk 35
         versionCode 1
