--- a/src/Entrega 1/Frontend/FecaPass/app/src/main/AndroidManifest.xml
+++ b/src/Entrega 1/Frontend/FecaPass/app/src/main/AndroidManifest.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="br.fecapads.fecapassjava">
 
+    <!-- Permissão para acessar a Internet -->
+    <uses-permission android:name="android.permission.INTERNET" />
+
+    <!-- Configuração de segurança de rede (se você estiver utilizando HTTP no Android 9 ou superior) -->
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,15 +17,17 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FecapassJava"
         tools:targetApi="31">
+
+        <!-- Atividades do app -->
         <activity android:name=".TelaEntrar"></activity>
         <activity android:name=".EsqueciSenha"/>
+        <activity android:name=".CadastroResultado"></activity>
 
         <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
