--- a/src/Frontend/FecaPass/app/src/main/AndroidManifest.xml
+++ b/src/Frontend/FecaPass/app/src/main/AndroidManifest.xml
@@ -16,6 +16,12 @@
         android:theme="@style/Theme.FecapassJava"
         tools:targetApi="31">
         <activity
+            android:name=".Pix"
+            android:exported="false" />
+        <activity
+            android:name=".FormaDePagamento"
+            android:exported="false" />
+        <activity
             android:name=".SelecaoCompra"
             android:exported="false" />
         <activity
