--- a/src/Frontend/FecaPass/app/src/main/AndroidManifest.xml
+++ b/src/Frontend/FecaPass/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:theme="@style/Theme.FecapassJava"
         tools:targetApi="31">
         <activity
+            android:name=".Pedido"
+            android:exported="false" />
+        <activity
             android:name=".Pix"
             android:exported="false" />
         <activity
