--- a/src/Frontend/FecaPass/app/build.gradle
+++ b/src/Frontend/FecaPass/app/build.gradle
@@ -30,6 +30,11 @@ android {
 
 dependencies {
     implementation 'com.squareup.okhttp3:okhttp:4.9.3'
+    implementation 'com.google.zxing:core:3.4.1'
+    implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
+    implementation 'com.google.code.gson:gson:2.8.8'  // ou a versão mais recente
+    implementation 'com.github.bumptech.glide:glide:4.16.0'
+
     implementation libs.appcompat
     implementation libs.material
     implementation libs.activity
@@ -37,4 +42,5 @@ dependencies {
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
+
 }
